Fix for top nav getting hidden behind horizontal scrollbar

--- a/app/assets/stylesheets/top_nav.scss
+++ b/app/assets/stylesheets/top_nav.scss
@@ -57,7 +57,7 @@
 }
 
 .is-dropdown-submenu {
-  z-index: 3;
+  z-index: 100;
 }
 
 .menu .active > a {
